# AdventOfCode2022

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: day01_calorie_counting.cpp  day02_rock_paper_scissors.cpp  day03_rucksack.cpp  day04_camp_cleaning.cpp  day04_input.txt  day05_crates.cpp  day05_input_stacks.txt  helpers.hpp
